<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        android:orderInCategory="1">
        <item
            android:id="@+id/drawer_map"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/title_map" />
        <item
            android:id="@+id/drawer_process"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/title_progress" />
        <item
            android:id="@+id/drawer_contacts"
            android:icon="@mipmap/ic_menu_friendslist"
            android:title="@string/title_contacts" />
    </group>

    <item
        android:orderInCategory="20"
        android:title="@string/title_game">
        <menu>
            <item
                android:id="@+id/drawer_achievements"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/title_achievements" />
            <item
                android:id="@+id/drawer_leaderboard"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/title_leaderboard" />
        </menu>
    </item>

    <item
        android:orderInCategory="999"
        android:title="@string/title_more">
        <menu>
            <item
                android:id="@+id/drawer_preferences"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/title_settings" />
            <item
                android:id="@+id/drawer_website"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/title_website" />
            <item
                android:id="@+id/drawer_changelog"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/title_changelog" />
        </menu>
    </item>
</menu>